[gd_scene load_steps=10 format=3 uid="uid://b725rf5f38vdo"]

[ext_resource type="PackedScene" uid="uid://c7lgorhb62ah1" path="res://Hearts.tscn" id="1_4sxdb"]
[ext_resource type="Script" path="res://main.gd" id="1_ksrux"]
[ext_resource type="Script" path="res://Game.gd" id="1_ysi01"]
[ext_resource type="Texture2D" uid="uid://yxiewluvw5hi" path="res://assets/icons.png" id="2_t7xfp"]
[ext_resource type="Script" path="res://NetCode.gd" id="2_x4vic"]
[ext_resource type="Script" path="res://Lobby.gd" id="3_bw8dh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tm5qn"]
atlas = ExtResource("2_t7xfp")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4oe1"]
atlas = ExtResource("2_t7xfp")
region = Rect2(0, 20, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_aovd6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm5qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4oe1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_ksrux")
metadata/_edit_horizontal_guides_ = [265.0, 142.0]
metadata/_edit_lock_ = true

[node name="NetCode" type="Node2D" parent="."]
script = ExtResource("2_x4vic")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 640.0
mouse_filter = 2
color = Color(0.0862745, 0.32549, 0.623529, 1)
metadata/_edit_lock_ = true

[node name="Lobby" type="Node2D" parent="."]
visible = false
script = ExtResource("3_bw8dh")

[node name="Users" type="ItemList" parent="Lobby"]
offset_left = 266.0
offset_top = 110.0
offset_right = 870.0
offset_bottom = 461.0
theme_override_font_sizes/font_size = 20

[node name="Title" type="Label" parent="Lobby"]
offset_left = 463.0
offset_top = 24.0
offset_right = 642.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 50
text = "Lobby"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="Lobby"]
offset_left = 69.0
offset_top = 518.0
offset_right = 248.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 40
text = "name:"
horizontal_alignment = 1

[node name="Register" type="Button" parent="Lobby"]
offset_left = 894.0
offset_top = 518.0
offset_right = 1029.0
offset_bottom = 589.0
theme_override_font_sizes/font_size = 30
text = "Register"

[node name="Username" type="TextEdit" parent="Lobby"]
offset_left = 260.0
offset_top = 521.0
offset_right = 865.0
offset_bottom = 582.0
theme_override_font_sizes/font_size = 30
scroll_fit_content_height = true

[node name="Challenge" type="Button" parent="Lobby"]
offset_left = 904.0
offset_top = 264.0
offset_right = 1053.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 30
text = "Challenge"

[node name="Accept" type="Button" parent="Lobby"]
offset_left = 85.0
offset_top = 264.0
offset_right = 234.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 30
text = "Accept"

[node name="Menu" type="Node2D" parent="."]
visible = false

[node name="Play" type="MenuButton" parent="Menu"]
offset_left = 408.0
offset_top = 348.0
offset_right = 722.0
offset_bottom = 557.0
theme_override_colors/font_hover_color = Color(0.160784, 0.737255, 0.584314, 1)
theme_override_font_sizes/font_size = 100
text = "PLAY"
switch_on_hover = true

[node name="Title" type="RichTextLabel" parent="Menu"]
offset_left = 182.0
offset_top = 91.0
offset_right = 1014.0
offset_bottom = 335.0
theme_override_font_sizes/normal_font_size = 150
text = "ONE ZERO"

[node name="Game" type="Node2D" parent="."]
script = ExtResource("1_ysi01")
metadata/_edit_lock_ = true

[node name="Info" type="Node2D" parent="Game"]
metadata/_edit_lock_ = true

[node name="Turn" type="Label" parent="Game/Info"]
offset_left = 423.0
offset_top = 21.0
offset_right = 742.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 40
text = "Turn 1"
horizontal_alignment = 1

[node name="Outcome" type="Label" parent="Game/Info"]
offset_left = 444.0
offset_top = 135.0
offset_right = 706.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 40
text = "Player
Blocked!"
horizontal_alignment = 1

[node name="PlyrName" type="Label" parent="Game/Info"]
offset_left = 56.0
offset_top = 17.0
offset_right = 375.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 40
text = "Player"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrPrevLabel" type="Label" parent="Game/Info"]
offset_left = 346.0
offset_top = 307.0
offset_right = 478.0
offset_bottom = 345.0
theme_override_font_sizes/font_size = 25
text = "previous:"
horizontal_alignment = 1

[node name="PlyrPrev" type="Label" parent="Game/Info"]
offset_left = 343.0
offset_top = 328.0
offset_right = 481.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1

[node name="PlyrChoice" type="Label" parent="Game/Info"]
offset_left = 162.0
offset_top = 141.0
offset_right = 284.0
offset_bottom = 349.0
theme_override_colors/font_color = Color(0, 0.694118, 1, 1)
theme_override_font_sizes/font_size = 150
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrInfo" type="Label" parent="Game/Info"]
offset_left = 62.0
offset_top = 324.0
offset_right = 386.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 50
text = "Locked In"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrAttacking" type="Label" parent="Game/Info"]
offset_left = 67.0
offset_top = 101.0
offset_right = 386.0
offset_bottom = 194.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Attacking"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlyrHp" parent="Game/Info" instance=ExtResource("1_4sxdb")]
position = Vector2(47, 130)

[node name="PlyrAtkIcon" type="AnimatedSprite2D" parent="Game/Info"]
position = Vector2(416, 226)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_aovd6")
frame = 1

[node name="OpntChoice" type="Label" parent="Game/Info"]
offset_left = 874.0
offset_top = 145.0
offset_right = 990.0
offset_bottom = 353.0
theme_override_colors/font_color = Color(0.764706, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "0"
horizontal_alignment = 1

[node name="OpntInfo" type="Label" parent="Game/Info"]
offset_left = 772.0
offset_top = 327.0
offset_right = 1096.0
offset_bottom = 430.0
theme_override_font_sizes/font_size = 50
text = "Locked In"
horizontal_alignment = 1

[node name="OpntName" type="Label" parent="Game/Info"]
offset_left = 781.0
offset_top = 19.0
offset_right = 1100.0
offset_bottom = 112.0
theme_override_font_sizes/font_size = 40
text = "Opponent"
horizontal_alignment = 1

[node name="OpntPrevLabel" type="Label" parent="Game/Info"]
offset_left = 689.0
offset_top = 307.0
offset_right = 821.0
offset_bottom = 345.0
theme_override_font_sizes/font_size = 25
text = "previous:"
horizontal_alignment = 1

[node name="OpntPrev" type="Label" parent="Game/Info"]
offset_left = 684.0
offset_top = 327.0
offset_right = 822.0
offset_bottom = 407.0
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1

[node name="OpntAttacking" type="Label" parent="Game/Info"]
offset_left = 772.0
offset_top = 102.0
offset_right = 1091.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Defending"
horizontal_alignment = 1

[node name="OpntHp" parent="Game/Info" instance=ExtResource("1_4sxdb")]
position = Vector2(1109, 132)

[node name="OpntAtkIcon" type="AnimatedSprite2D" parent="Game/Info"]
position = Vector2(758, 221)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_aovd6")
frame = 1

[node name="Controls" type="Node2D" parent="Game"]
metadata/_edit_lock_ = true

[node name="LockIn" type="Button" parent="Game/Controls"]
offset_left = 447.0
offset_top = 456.0
offset_right = 704.0
offset_bottom = 592.0
theme_override_font_sizes/font_size = 50
text = "Lock In"

[node name="One" type="Button" parent="Game/Controls"]
offset_left = 78.0
offset_top = 455.0
offset_right = 208.0
offset_bottom = 591.0
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Zero" type="Button" parent="Game/Controls"]
offset_left = 229.0
offset_top = 455.0
offset_right = 359.0
offset_bottom = 591.0
theme_override_font_sizes/font_size = 50
text = "0
"

[node name="$$$" type="Button" parent="Game/Controls"]
offset_left = 855.0
offset_top = 551.0
offset_right = 1149.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 25
text = "Buy Platium Tokens"

[connection signal="accept_challenge_response" from="NetCode" to="Lobby" method="_on_net_code_accept_challenge_response"]
[connection signal="challenge_user_response" from="NetCode" to="Lobby" method="_on_net_code_challenge_user_response"]
[connection signal="load_match_response" from="NetCode" to="Game" method="_on_net_code_load_match_response"]
[connection signal="lock_in_response" from="NetCode" to="Game" method="_on_net_code_lock_in_response"]
[connection signal="register_response" from="NetCode" to="Lobby" method="_on_net_code_register_response"]
[connection signal="users_response" from="NetCode" to="Lobby" method="_on_net_code_users_response"]
[connection signal="accept_challenge" from="Lobby" to="NetCode" method="_on_lobby_accept_challenge"]
[connection signal="challenge_user" from="Lobby" to="NetCode" method="_on_lobby_challenge_user"]
[connection signal="load_users" from="Lobby" to="NetCode" method="_on_lobby_load_users"]
[connection signal="register" from="Lobby" to="NetCode" method="_on_lobby_register"]
[connection signal="start_match" from="Lobby" to="." method="_on_lobby_start_match"]
[connection signal="pressed" from="Lobby/Register" to="Lobby" method="_on_register_pressed"]
[connection signal="pressed" from="Lobby/Challenge" to="Lobby" method="_on_challenge_pressed"]
[connection signal="pressed" from="Lobby/Accept" to="Lobby" method="_on_accept_pressed"]
[connection signal="pressed" from="Menu/Play" to="." method="_on_play_pressed"]
[connection signal="load_match" from="Game" to="NetCode" method="_on_game_load_match"]
[connection signal="lock_in" from="Game" to="NetCode" method="_on_game_lock_in"]
[connection signal="pressed" from="Game/Controls/LockIn" to="Game" method="_on_lock_in_pressed"]
[connection signal="pressed" from="Game/Controls/One" to="Game" method="_on_one_pressed"]
[connection signal="pressed" from="Game/Controls/Zero" to="Game" method="_on_zero_pressed"]
